--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "flashloan-scheduler",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@aave/core-v3": "^1.16.2-beta.5",
-    "@openzeppelin/contracts": "^4.8.0",
-    "alchemy-sdk": "^2.2.5",
-    "cron": "^2.1.0",
-    "dotenv": "^16.0.3"
-  },
-  "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.2.1",
-    "ethers": "^5.7.2",
-    "hardhat": "^2.12.4"
-  }
+    "name": "flashloan-scheduler",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "prettier": "npx prettier --write ."
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@aave/core-v3": "^1.16.2-beta.5",
+        "@openzeppelin/contracts": "^4.8.0",
+        "alchemy-sdk": "^2.2.5",
+        "cron": "^2.1.0",
+        "dotenv": "^16.0.3"
+    },
+    "devDependencies": {
+        "@nomiclabs/hardhat-ethers": "^2.2.1",
+        "ethers": "^5.7.2",
+        "hardhat": "^2.12.4",
+        "prettier": "2.8.1"
+    }
 }
