added mainnet and testnet to config. Added sendEth helper

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-API_URL=
-API_KEY=
-NETWORK=
-SOLIDITY_VERSION=
+GOERLI_API_URL=
+GOERLI_API_KEY=
+
+MAINNET_API_URL=
+MAINNET_API_KEY=
+
+NETWORK=goerli
+SOLIDITY_VERSION=0.8.10
 PRIVATE_KEY=
