--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
         "@openzeppelin/contracts": "^4.8.0",
         "alchemy-sdk": "^2.2.5",
         "cron": "^2.1.0",
-        "dotenv": "^16.0.3"
+        "dotenv": "^16.0.3",
+        "node-fetch": "^3.3.0"
     },
     "devDependencies": {
         "@nomiclabs/hardhat-ethers": "^2.2.1",
+        "@uniswap/sdk-core": "^3.1.0",
+        "@uniswap/v3-sdk": "^3.9.0",
         "ethers": "^5.7.2",
         "hardhat": "^2.12.4",
         "prettier": "2.8.1"
