--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
         "@openzeppelin/contracts": "^4.8.0",
         "alchemy-sdk": "^2.2.5",
         "cron": "^2.1.0",
-        "dotenv": "^16.0.3",
-        "node-fetch": "^3.3.0"
+        "dotenv": "^16.0.3"
     },
     "devDependencies": {
         "@nomiclabs/hardhat-ethers": "^2.2.1",
