--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@aave/core-v3": "^1.16.2-beta.5",
         "@openzeppelin/contracts": "^4.8.0",
+        "@uniswap/v3-periphery": "^1.4.3",
         "alchemy-sdk": "^2.2.5",
         "cron": "^2.1.0",
         "dotenv": "^16.0.3"
